--- a/NoSQL_setup_solved.ipynb
+++ b/NoSQL_setup_solved.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "3ecdd008",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "id": "b15e8f60",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['admin',\n",
+       " 'autosaurus',\n",
+       " 'classdb',\n",
+       " 'clssDB',\n",
+       " 'config',\n",
+       " 'epa',\n",
+       " 'local',\n",
+       " 'met',\n",
+       " 'petsitly_marketing',\n",
+       " 'test-database',\n",
+       " 'travel_db']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#To rerun code and to ensure numbers reflect correct.  Drop the data and then re-add\n",
+    "mongo.drop_database('uk_food')\n",
+    "mongo.list_database_names()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "7f9ececa",
    "metadata": {},
    "outputs": [
@@ -61,7 +94,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['admin', 'autosaurus', 'classdb', 'clssDB', 'config', 'epa', 'local', 'met', 'petsitly_marketing', 'test-database', 'travel_db', 'uk_food', 'uk_foods']\n"
+      "['admin', 'autosaurus', 'classdb', 'clssDB', 'config', 'epa', 'local', 'met', 'petsitly_marketing', 'test-database', 'travel_db', 'uk_food']\n"
      ]
     }
    ],
@@ -72,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "71e373c1",
    "metadata": {},
    "outputs": [],
@@ -83,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "ef1b89ed",
    "metadata": {},
    "outputs": [
@@ -102,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "18ab463c",
    "metadata": {},
    "outputs": [
@@ -121,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "6a0d92df",
    "metadata": {},
    "outputs": [
@@ -129,32 +162,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'St Marys Church Of England Primary School',\n",
-      " 'AddressLine2': 'Warren Road',\n",
-      " 'AddressLine3': 'Folkestone',\n",
-      " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'St Marys COE (aided) Primary School',\n",
-      " 'BusinessType': 'School/college/university',\n",
-      " 'BusinessTypeID': 7845,\n",
+      "{'AddressLine1': 'The Bay',\n",
+      " 'AddressLine2': 'St Margarets Bay',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'The Coastguard Inn',\n",
+      " 'BusinessType': 'Pub/bar/nightclub',\n",
+      " 'BusinessTypeID': 7843,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.871474174837,\n",
-      " 'FHRSID': 289353,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000002468',\n",
-      " 'LocalAuthorityCode': '188',\n",
-      " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
-      " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
-      " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
+      " 'Distance': 4587.347174863443,\n",
+      " 'FHRSID': 1034540,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000078691',\n",
+      " 'LocalAuthorityCode': '182',\n",
+      " 'LocalAuthorityEmailAddress': 'publicprotection@dover.gov.uk',\n",
+      " 'LocalAuthorityName': 'Dover',\n",
+      " 'LocalAuthorityWebSite': 'http://www.dover.gov.uk/',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6QH',\n",
-      " 'RatingDate': '2016-09-13T00:00:00',\n",
+      " 'PostCode': 'CT15 6DY',\n",
+      " 'RatingDate': '2022-08-17T00:00:00',\n",
       " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': 5,\n",
+      " 'RatingValue': '5',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('67941328cf1ee17ab4661479'),\n",
-      " 'geocode': {'latitude': 51.085797, 'longitude': 1.194762},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/289353',\n",
+      " '_id': ObjectId('67950d9fdca3c50bc58c54ba'),\n",
+      " 'geocode': {'latitude': '51.152225', 'longitude': '1.387974'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/1034540',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -164,7 +197,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
+      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 5}}\n"
      ]
     }
    ],
@@ -175,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "11c9f11b",
    "metadata": {},
    "outputs": [],
@@ -202,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "f28e2c15",
    "metadata": {},
    "outputs": [],
@@ -213,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "c2da7648",
    "metadata": {},
    "outputs": [],
@@ -251,17 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "id": "a6e5cece",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "InsertOneResult(ObjectId('6794415b3c9f33a27a888911'), acknowledged=True)"
+       "InsertOneResult(ObjectId('67950dbed72eaadd6682be3f'), acknowledged=True)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "63bb10f9",
    "metadata": {},
    "outputs": [
@@ -298,7 +331,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6794415b3c9f33a27a888911'),\n",
+      " '_id': ObjectId('67950dbed72eaadd6682be3f'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -319,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "93c63829",
    "metadata": {},
    "outputs": [
@@ -329,19 +362,19 @@
      "text": [
       "[{'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       "  'BusinessTypeID': 1,\n",
-      "  '_id': ObjectId('67941328cf1ee17ab466147a')},\n",
+      "  '_id': ObjectId('67950d9fdca3c50bc58c54bf')},\n",
       " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       "  'BusinessTypeID': 1,\n",
-      "  '_id': ObjectId('67941328cf1ee17ab4661481')},\n",
+      "  '_id': ObjectId('67950d9fdca3c50bc58c54c1')},\n",
       " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       "  'BusinessTypeID': 1,\n",
-      "  '_id': ObjectId('67941328cf1ee17ab4661487')},\n",
+      "  '_id': ObjectId('67950d9fdca3c50bc58c54c3')},\n",
       " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       "  'BusinessTypeID': 1,\n",
-      "  '_id': ObjectId('67941328cf1ee17ab466148b')},\n",
+      "  '_id': ObjectId('67950d9fdca3c50bc58c54c4')},\n",
       " {'BusinessType': 'Restaurant/Cafe/Canteen',\n",
       "  'BusinessTypeID': 1,\n",
-      "  '_id': ObjectId('67941328cf1ee17ab4661493')}]\n"
+      "  '_id': ObjectId('67950d9fdca3c50bc58c54c7')}]\n"
      ]
     }
    ],
@@ -361,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "id": "7f599f3d",
    "metadata": {},
    "outputs": [
@@ -371,7 +404,7 @@
        "UpdateResult({'n': 1, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "id": "a6ad16f7",
    "metadata": {},
    "outputs": [
@@ -408,7 +441,7 @@
       " 'PostCode': 'SE18 7DY',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('6794415b3c9f33a27a888911'),\n",
+      " '_id': ObjectId('67950dbed72eaadd6682be3f'),\n",
       " 'geocode': {'latitude': '51.49014200', 'longitude': '0.08384000'},\n",
       " 'scores': {'ConfidenceInManagement': '', 'Hygiene': '', 'Structural': ''}}\n"
      ]
@@ -429,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "768474a6",
    "metadata": {},
    "outputs": [
@@ -437,7 +470,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of documents with LocalAuthorityName as 'Dover': 0\n"
+      "Number of documents with LocalAuthorityName as 'Dover': 994\n"
      ]
     }
    ],
@@ -449,17 +482,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "id": "a11d5f1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "DeleteResult({'n': 0, 'ok': 1.0}, acknowledged=True)"
+       "DeleteResult({'n': 994, 'ok': 1.0}, acknowledged=True)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "id": "2a51aba0",
    "metadata": {},
    "outputs": [
@@ -491,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 26,
    "id": "8c356f7b",
    "metadata": {},
    "outputs": [
@@ -499,32 +532,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AddressLine1': 'St Marys Church Of England Primary School',\n",
-      " 'AddressLine2': 'Warren Road',\n",
-      " 'AddressLine3': 'Folkestone',\n",
-      " 'AddressLine4': 'Kent',\n",
-      " 'BusinessName': 'St Marys COE (aided) Primary School',\n",
-      " 'BusinessType': 'School/college/university',\n",
-      " 'BusinessTypeID': 7845,\n",
+      "{'AddressLine1': 'Wear Bay Road',\n",
+      " 'AddressLine2': 'Folkestone',\n",
+      " 'AddressLine3': 'Kent',\n",
+      " 'AddressLine4': '',\n",
+      " 'BusinessName': 'Wear Bay Bowls Club',\n",
+      " 'BusinessType': 'Pub/bar/nightclub',\n",
+      " 'BusinessTypeID': 7843,\n",
       " 'ChangesByServerID': 0,\n",
-      " 'Distance': 4591.871474174837,\n",
-      " 'FHRSID': 289353,\n",
-      " 'LocalAuthorityBusinessID': 'PI/000002468',\n",
+      " 'Distance': 4591.821311183521,\n",
+      " 'FHRSID': 647177,\n",
+      " 'LocalAuthorityBusinessID': 'PI/000041489',\n",
       " 'LocalAuthorityCode': '188',\n",
       " 'LocalAuthorityEmailAddress': 'foodteam@folkestone-hythe.gov.uk',\n",
       " 'LocalAuthorityName': 'Folkestone and Hythe',\n",
       " 'LocalAuthorityWebSite': 'http://www.folkestone-hythe.gov.uk',\n",
       " 'NewRatingPending': False,\n",
       " 'Phone': '',\n",
-      " 'PostCode': 'CT19 6QH',\n",
-      " 'RatingDate': '2016-09-13T00:00:00',\n",
-      " 'RatingKey': 'fhrs_5_en-gb',\n",
-      " 'RatingValue': 5,\n",
+      " 'PostCode': 'CT19 6PY',\n",
+      " 'RatingDate': '2014-03-31T00:00:00',\n",
+      " 'RatingKey': 'fhrs_4_en-gb',\n",
+      " 'RatingValue': '4',\n",
       " 'RightToReply': '',\n",
       " 'SchemeType': 'FHRS',\n",
-      " '_id': ObjectId('67941328cf1ee17ab4661479'),\n",
-      " 'geocode': {'latitude': 51.085797, 'longitude': 1.194762},\n",
-      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/289353',\n",
+      " '_id': ObjectId('67950d9fdca3c50bc58c5798'),\n",
+      " 'geocode': {'latitude': '51.086058', 'longitude': '1.196408'},\n",
+      " 'links': [{'href': 'https://api.ratings.food.gov.uk/establishments/647177',\n",
       "            'rel': 'self'}],\n",
       " 'meta': {'dataSource': None,\n",
       "          'extractDate': '0001-01-01T00:00:00',\n",
@@ -534,7 +567,7 @@
       "          'returncode': None,\n",
       "          'totalCount': 0,\n",
       "          'totalPages': 0},\n",
-      " 'scores': {'ConfidenceInManagement': 0, 'Hygiene': 0, 'Structural': 0}}\n"
+      " 'scores': {'ConfidenceInManagement': 10, 'Hygiene': 5, 'Structural': 5}}\n"
      ]
     }
    ],
@@ -563,17 +596,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 27,
    "id": "fd4112ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UpdateResult({'n': 38786, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+       "UpdateResult({'n': 38786, 'nModified': 38786, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,40 +627,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "id": "04430a5b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "UpdateResult({'n': 0, 'nModified': 0, 'ok': 1.0, 'updatedExisting': False}, acknowledged=True)"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4091 documents were set to null.\n"
+     ]
     }
    ],
    "source": [
     "# Set non 1-5 Rating Values to Null\n",
     "non_ratings = [\"AwaitingInspection\", \"Awaiting Inspection\", \"AwaitingPublication\", \"Pass\", \"Exempt\"]\n",
-    "establishments.update_many({\"RatingValue\": {\"$in\": non_ratings}}, [ {'$set':{ \"RatingValue\" : None}} ])"
+    "non_ratings_results = establishments.update_many({\"RatingValue\": {\"$in\": non_ratings}}, [ {'$set':{ \"RatingValue\" : None}}])\n",
+    "print(f\"{non_ratings_results.modified_count} documents were set to null.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "id": "92524ccc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "UpdateResult({'n': 38786, 'nModified': 1, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
+       "UpdateResult({'n': 38786, 'nModified': 34695, 'ok': 1.0, 'updatedExisting': True}, acknowledged=True)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "id": "0deacaf9",
    "metadata": {},
    "outputs": [
@@ -647,7 +678,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Document: {'RatingValue': 5, 'geocode': {'longitude': 1.194762, 'latitude': 51.085797}}\n",
+      "Document: {'RatingValue': 4, 'geocode': {'longitude': 1.196408, 'latitude': 51.086058}}\n",
       "Latitude Type: <class 'float'>\n",
       "Longitude Type: <class 'float'>\n",
       "RatingValue Type: <class 'int'>\n"
